updated help page

--- a/apps/courseplanner/templates/help.html
+++ b/apps/courseplanner/templates/help.html
@@ -8,31 +8,36 @@
     <h1 class="title is-4">Getting Started</h1>
     <article class="message is-info">
         <div class="message-body">
-            First, go to the <a href="[[=URL('course/create')]]" style="text-decoration: none"><b>Create Course</b></a> page under the Courses menu, and create the courses you want. The courses you create will be displayed on the
-            <a href="[[=URL('course/all')]]" style="text-decoration: none"><b>All Courses</b></a> page under the Courses menu. Once you are finished creating courses, you can go to the
-            <a href="[[=URL('course/search')]]" style="text-decoration: none"><b>Course Search</b></a> page under the Courses menu and look for a course that you have created. When you click Submit on the Course Search form, you can then add a course
-            to your planner, edit a course, or delete the course from your planner. Your planner on the home page will be updated with your changes accordingly.
+            First, go to the <a href="[[=URL('course/create')]]" style="text-decoration: none"><b>Create Course</b></a> page under the <i>Courses</i> menu, and create a course. The courses you create will be displayed on the
+            <a href="[[=URL('course/all')]]" style="text-decoration: none"><b>All Courses</b></a> page, and also become searchable on the <a href="[[=URL('course/search')]]" style="text-decoration: none"><b>Course Search</b></a> page.
+        </div>
+    </article>
+    <article class="message is-info">
+        <div class="message-body">
+            On the <a href="[[=URL('course/search')]]" style="text-decoration: none"><b>Course Search</b></a> page, when you click <i>Submit</i> on the <i>Course Search</i> form, you can then add a course to your planner, edit a course, or delete the
+            course from your planner. Your planner on the home page will be updated with your changes accordingly.
         </div>
     </article>
     <h1 class="title is-4">Calculating Grades</h1>
     <article class="message is-info">
         <div class="message-body">
             Once you have added courses to your planner, you can calculate your grade for a course and your overall GPA after taking a course on the
-            <a href="[[=URL('grades/calculator')]]" style="text-decoration: none"><b>Grade Calculator</b></a> page. First, choose a course from the dropdown menu, and click Add Row to enter an assignment grade. Once you are done adding your assignment
-            grades, you can click Save.
+            <a href="[[=URL('grades/calculator')]]" style="text-decoration: none"><b>Grade Calculator</b></a> page. First, choose a course from the dropdown menu, and click <i>Add Row</i> to enter an assignment grade. Once you are done adding your assignment
+            grades, you can click <i>Save</i>.
         </div>
     </article>
     <article class="message is-info">
         <div class="message-body">
-            Your overall grade in the class according to the assignments you have entered will appear in the Average Grade box. Click on the dropdown menu next to the box and select the letter that matches your grade. When you are finished, click Submit Grade to
-            see the course grade added to the GPA Calculator. Your GPA and Credits will be updated according to your changes.
+            Your overall grade in the class according to the assignment grades you have entered will appear in the <i>Average Grade</i> box. Click on the dropdown menu next to the box and select the letter that matches your grade. When you are finished,
+            click <i>Submit Grade</i> to see the course grade added to the GPA Calculator. Your GPA and Credits will be updated according to your changes.
         </div>
     </article>
     <h1 class="title is-4">Sharing Planners</h1>
     <article class="message is-info">
         <div class="message-body">
             To help your academic planning, you can view a peer's planner! Head over to the
-            <a href="[[=URL('share')]]" style="text-decoration: none"><b>View a Peer's Planner</b></a> page and search by user or major, and click on a user to view their planner.
+            <a href="[[=URL('share')]]" style="text-decoration: none"><b>View a Peer's Planner</b></a> page and search by user or major, and click on a user to view their planner. You can also share your planner with other users on the <a href="[[=URL('index')]]"
+                style="text-decoration: none"><b>Course Planner</b></a> page by clicking the <i>Share My Planner Publicly</i> button. Note that you must have a university selected in your <a href="[[=URL('user/profile')]]" style="text-decoration: none"><b>Profile</b></a>            in order to share your planner. If you would like to stop sharing your planner, you can click <i>Unshare My Planner</i>.
         </div>
     </article>
 </div>
