added comments to help page

--- a/apps/courseplanner/templates/help.html
+++ b/apps/courseplanner/templates/help.html
@@ -1,10 +1,17 @@
+<!--
+help.html
+
+Template for Help page containing information on getting started, adding courses to your planner,
+calculating grades, and planner sharing. Pages are bolded and hyperlinked.
+-->
+
 [[extend 'layout.html']]
 
 <title>Help</title>
 
-
 <div class="section" id="vue-target" v-cloak>
     <h1 class="title">Need Help?</h1>
+    <!-- getting started section -->
     <h1 class="title is-4">Getting Started</h1>
     <article class="message is-info">
         <div class="message-body">
@@ -18,6 +25,7 @@
             course from your planner. Your planner on the home page will be updated with your changes accordingly.
         </div>
     </article>
+    <!-- calculating grades section -->
     <h1 class="title is-4">Calculating Grades</h1>
     <article class="message is-info">
         <div class="message-body">
@@ -32,6 +40,7 @@
             click <i>Submit Grade</i> to see the course grade added to the GPA Calculator. Your GPA and Credits will be updated according to your changes.
         </div>
     </article>
+    <!-- sharing planners section -->
     <h1 class="title is-4">Sharing Planners</h1>
     <article class="message is-info">
         <div class="message-body">
