added header comment block

--- a/apps/courseplanner/templates/calculator.html
+++ b/apps/courseplanner/templates/calculator.html
@@ -1,3 +1,11 @@
+<!--
+calculator.html
+
+Template for Grade Calculator page. Contains a course grade calculator for inputting assignment grades, and
+a GPA calculator for submitted course grades. Choose a Course dropdown menu contains courses added to planner
+only.
+-->
+
 [[extend 'layout.html']]
 
 <title>Grade Calculator</title>
