--- a/apps/courseplanner/templates/course.html
+++ b/apps/courseplanner/templates/course.html
@@ -1,3 +1,10 @@
+<!--
+course.html
+
+Template for Create Course form. When user clicks Submit, the course is added to the All Courses page and
+becomes searchable in the Course Search page.
+-->
+
 [[extend "layout.html"]]
 
 <title>Create Course</title>
