--- a/apps/courseplanner/templates/course_history.html
+++ b/apps/courseplanner/templates/course_history.html
@@ -1,3 +1,10 @@
+<!--
+course_history.html
+
+Template for Enrollment History page. Displays courses with submitted grades (from Grade Calculator page)
+and status. Courses are editable and can be deleted.
+-->
+
 [[extend "layout.html"]]
 
 <title>Enrollment History</title>
