added comments and removed unused function

--- a/apps/courseplanner/templates/courses_list.html
+++ b/apps/courseplanner/templates/courses_list.html
@@ -1,3 +1,11 @@
+<!--
+courses_list.html
+
+Template for All Courses page. Courses created from the Create Course page are displayed under My Courses. Public
+Courses display a list of CSE courses offered for the upcoming school year (see Improvements section on README.pdf
+for more information).
+-->
+
 [[extend "layout.html"]]
 
 <title>All Courses</title>
@@ -17,8 +25,7 @@
         <h2 class="title is-4">My Courses</h2>
         <!-- table header -->
         <thead>
-            <th><abbr title="Abbreviation" class="clickable " style="text-decoration:underline;"
-                    @click="sortByAbbr()">Abbr
+            <th><abbr title="Abbreviation" class="clickable " style="text-decoration:underline;" @click="sortByAbbr()">Abbr
                     <i :class="getSortIconClass(abbrFilterOption)"></i></abbr></th>
             <th class="clickable" style="text-decoration:underline;" @click="sortByNumber()">Number
                 <i :class="getSortIconClass(numberFilterOption)"></i>
