--- a/apps/courseplanner/templates/index.html
+++ b/apps/courseplanner/templates/index.html
@@ -41,7 +41,7 @@
                     <h2 id="no_table">
                         Your planner is empty. <a href="[[=URL('course/create')]]">Create a course</a> or <a href="[[=URL('course/search')]]">search for a course</a> to add to your planner.
                     </h2>
-                    <!-- Current courses list goes here -->
+                    <!-- Planner -->
                     <div id="table">
                         <table class="table is-striped is-fullwidth">
                             <thead>
@@ -54,6 +54,7 @@
                             <tbody id="planner_body">
                             </tbody>
                         </table>
+                        <!-- Buttons to add or delete a year on the planner -->
                         <a id="add_year_btn" class="button is-primary" @click="add_year()">
                             <span>Add Year</span>
                         </a>
@@ -65,6 +66,7 @@
             </section>
         </div>
 
+        <!-- Used as a template when adding a new year to the planner. Template tag was not working -->
         <div style="display:none">
             <table id="year_template">
                 <tr>
@@ -76,6 +78,7 @@
                 </tr>
             </table>
         </div>
+
     </div>
 </div>
 
