added header comment

--- a/apps/courseplanner/templates/index.html
+++ b/apps/courseplanner/templates/index.html
@@ -1,3 +1,10 @@
+<!--
+index.html
+
+Template for Course Planner or home page containing user's personal planner. Courses on the planner are
+updated according to changes made on other pages.
+-->
+
 [[extend 'layout.html']]
 
 <title>Course Planner</title>
@@ -82,15 +89,15 @@
     </div>
 </div>
 
-    [[block page_scripts]]
-    <!-- Loads the index-specific js for Vue -->
-    <script>
-        let add_course_url = "[[=XML(add_course_url)]]";
-        let delete_course_url = "[[=XML(delete_course_url)]]";
-        let edit_course_url = "[[=XML(edit_course_url)]]";
-        let share_courses_url = "[[=XML(share_courses_url)]]";
-        let get_shared_status_url = "[[=XML(get_shared_status_url)]]";
-    </script>
-    <script src="js/index.js"></script>
-    <script src='https://cdn.jsdelivr.net/npm/vue2-timeago@1.2.3/dist/vue2-timeago.js'></script>
-    [[end]]
+[[block page_scripts]]
+<!-- Loads the index-specific js for Vue -->
+<script>
+    let add_course_url = "[[=XML(add_course_url)]]";
+    let delete_course_url = "[[=XML(delete_course_url)]]";
+    let edit_course_url = "[[=XML(edit_course_url)]]";
+    let share_courses_url = "[[=XML(share_courses_url)]]";
+    let get_shared_status_url = "[[=XML(get_shared_status_url)]]";
+</script>
+<script src="js/index.js"></script>
+<script src='https://cdn.jsdelivr.net/npm/vue2-timeago@1.2.3/dist/vue2-timeago.js'></script>
+[[end]]
