remove blue text on public course list

--- a/apps/courseplanner/templates/courses_list.html
+++ b/apps/courseplanner/templates/courses_list.html
@@ -69,7 +69,7 @@ for more information).
             <th>Description</th>
             <th>Credits</th>
             <th>Offering</th>
-            <th class="clickable has-text-link" style="text-decoration:underline;">Year Offered</th>
+            <th>Year Offered</th>
         </thead>
         <!-- CSE Courses (in order by number) -->
         <tbody>
